Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65838

Scaled fonts are disappearing or drawn in unexpected size

XMLWordPrintable

      Attached example seems to drop W completely when run with Qt 5.10 on Ubuntu 16.04. Some older Qt versions show it positioned wrongly and way bigger than expected. The result also seems to vary between distributions so that it affects other characters too, which might indicate that this behavior comes from libfreetype.

        1. qtbug65838.tar.gz
          0.7 kB
        2. qtbug65838.zip
          1 kB
        3. qtbug65838.jpg
          qtbug65838.jpg
          35 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes