Fix some cases of scaled text disappearing with freetype

Commit a56ee60791538e5442b3d97b75270b25dc4986db changed type of advance
to short, restoring this fixes at least some cases where glyphs were
disappearing.

Task-number: QTBUG-65838
Change-Id: I33b252d91fb7541eaea3275b1950a048941869a6
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>